--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.6",
+    "systemjs": "^0.19.36",
     "zone.js": "^0.6.15"
   }
 }
